--- a/box/fitted/designinto3dboxfitted.tex
+++ b/box/fitted/designinto3dboxfitted.tex
@@ -189,7 +189,7 @@ input designinto3dboxfittedfigure1;
 input designinto3dboxfittedfigure0;
 
 input designinto3dboxfittedfigure2;
-%input designinto3dboxfittedpostamble;
+input designinto3dboxfittedpostamble;
 \end{mplibcode}
 
 \end{document}
